# Anjaymabar-Net-Tools

./: .gitignore  README.md  SMB_Network_Manager.spec  agent.md  create_icon.py  index.html  main.py  package-lock.json  package.json  tailwind.config.js  version_info.txt
config/: smb_settings.json
docs/: alternative_languages_analysis.md  analysis.md  best_pick_modern_ui.md  design_mockup_comparison.md  network_adapter_optimization.md  network_optimization_summary.md  refactor_tauri_plan.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: admin.rs  cache.rs  diagnostics.rs  file_manager.rs  firewall.rs  lib.rs  main.rs  network.rs  network_unified.rs  smb.rs
src/components/: FirewallTab.tsx  NetworkTab.tsx  SMBTab.tsx
src/components/Layout/: Header.tsx  Sidebar.tsx
src/components/UI/: BenchmarkPanel.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  NetworkConfigSkeleton.tsx  Skeleton.tsx  StatusBadge.tsx  ToggleSwitch.tsx  Tooltip.tsx  Transitions.tsx  index.ts
src/hooks/: useNetworkCache.ts  useNetworkData.ts
src/lib/: benchmark.ts  tauri.ts  validators.ts
ui/: __init__.py  firewall_tab.py  loading_overlay.py  main_window.py  network_tab.py  smb_tab.py  toggle_switch.py
utils/: __init__.py  admin_check.py  powershell.py
